Bug 691431 - Remove invalid assertion and NULL check childFrame in WrapPreserve3DList. r=roc